# CUDA_Iris_Classification

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  colab-setup.sh  install.sh  run.sh  test_on_colab.ipynb
data/: download_iris.py
include/: common.h  test_config.h
include/classifiers/: kmeans_classifier.h  neural_network.h  svm_classifier.h
include/data/: iris_data_loader.h
include/ensemble/: ensemble_classifier.h
include/preprocessing/: data_preprocessor.h
include/utils/: cuda_memory.h  cuda_utils.h  performance_monitor.h
results/: results.txt
scripts/: analyze_results.py  plot_results.py
src/: main.cu
src/classifiers/: kmeans_classifier.cu  kmeans_classifier.h  neural_network.cu  svm_classifier.cu  svm_classifier.h
src/data/: iris_data_loader.cu  iris_data_loader.h
src/ensemble/: ensemble_classifier.cu  ensemble_classifier.h
src/preprocessing/: data_preprocessor.cu
src/utils/: cuda_utils.cu  cuda_utils.h  metrics_utils.cu  metrics_utils.h  performance_monitor.cu  performance_monitor.h
tests/: test_classifiers.cu
